--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/ssr": "^0.5.0",
+    "@supabase/supabase-js": "^2.45.2",
     "@worldcoin/idkit": "^1.3.0",
     "@worldcoin/minikit-js": "0.0.27-internal-alpha",
     "class-variance-authority": "^0.7.0",
